--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gpu.js": "^2.9.4"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
